# codeforces-rag

./: .gitignore  Justfile  docker-compose.yml
.github/workflows/: style.yml  test.yml  type.yml
docs/: quick-start.md  structure.md
envs/: .env.parser.example  .env.postgres.example  .env.rag.example
parser/: .env.example  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
parser/.github/workflows/: lint.yml  test.yml  typecheck.yml
parser/benchmarks/: README.md  __init__.py  config.py  pricing.py  run_benchmark.py  validators.py
parser/benchmarks/core/: __init__.py  base_runner.py  benchmark_types.py  tracked_llm_client.py
parser/benchmarks/editorial_finder/: __init__.py  metrics.py  runner.py  test_data.py
parser/benchmarks/editorial_segmentation/: __init__.py  metrics.py  runner.py  test_data.py
parser/benchmarks/reporting/: __init__.py  base_metrics.py  console_output.py  html_report.py  json_report.py
parser/docs/: API_ENDPOINTS.md  LLM_EDITORIAL_DETECTION.md
parser/src/: config.py
parser/src/api/: app.py  dependencies.py  exceptions.py
parser/src/infrastructure/: __init__.py  (+5 more)
rag/: .dockerignore  Dockerfile  Justfile  pyproject.toml  pytest.ini
rag/src/: api.py  chunker.py  config.py  db.py  indexer.py  models.py  parser_client.py
rag/tests/: conftest.py
rag/tests/api/: conftest.py  test_api.py
rag/tests/unit/: conftest.py  test_chunker.py  test_config.py  test_db.py  test_embedder.py  test_indexer.py  test_models.py  test_parser_client.py
tui/: pyproject.toml
tui/src/: app.py
(+50 files in other folders)
