[project]
name = "codeforces-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "asyncpg",
    "qdrant-client",
    "openai",
    "httpx",
    "pydantic-settings",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
